# leibniz-daemon

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  HANDOFF-NEXT.md  HANDOFF.md  LICENSE.md  README.md  SECURITY.md  UAT_PLAN.md  architecture.md  demo.py  pyproject.toml  repair_reach_report.json  test_invariants.py
.claude/: settings.json
.github/: CODEOWNERS
.leibniz-ab/: ab_config.env.example
corpus/: frontier.json  known_results.json  mathlib_modules.json  novelty_exemplars.json
docker/: lean-repl.Dockerfile  lean.Dockerfile
docs/: autonomous-discovery-arc-capstone.md  capability-ladder.md  capability-roadmap-2026-07-03.md  confirm-report-amplification-2026-06-30.md  covering-exact-producer-finding.md  covering-reproduction-probe-finding.md  crt-open-problems-corpus.md  cycles-report-draft.md  cycles-report-novelty-frontier.md  discovery-ceiling-cross-backend-finding.md  evaluation-report-2026-06-30.md  external-brief-discovery-frontier-2026-06-30.md  external-brief-terwilliger-threepoint-2026-07-01.md  external-review-2-genuine-discovery.md  external-review-novelty-frontier.md  external-round-discovery-frontier-raw.md  external-round-discovery-frontier-synthesis.md  external-witness-brief-2026-06-26.md  external-witness-brief-acceleration.md  external-witness-brief-construction-proof-edge.md  external-witness-brief-second-domain.md  external-witness-brief-tool-foundation.md  external-witness-round-acceleration-synthesis.md  external-witness-round-construction-proof-edge-synthesis.md  external-witness-round-construction-proof-edge.md  external-witness-round-second-domain.md  external-witness-round-synthesis-2026-06-26.md  fleet-review-raising-the-ceiling.md  funsearch-decision-package.md  funsearch-llmfree-baseline-finding.md  funsearch-pilot-preregistration.md  funsearch-pilot-result-finding.md  gate-b0-second-domain-finding.md  gate-b2-ramsey-decide-wall-finding.md  gate-d0-producer-wall-finding.md  handoff-terwilliger-discovery-2026-07-02.md  handoff-terwilliger-sessions-2026-07-01.md  ingestion-pipeline-baseline.md  m1-proof-compression-finding.md  m2-expressibility-audit-finding.md  (+16 more)
files/: README.md  capability-ladder.md  faithfulness.py  novelty.py  pyproject.toml  verifiers.py
lean-project/: lakefile.toml  (+2 more)
(+870 files in other folders)
